--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
     "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.14",
-   
     "postcss": "^8.4.23",
     "svelte": "^3.57.0",
     "tailwindcss": "^3.3.2",
