--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
             node-version: ${{ matrix.node-version }}
-      - name: Execute Unit tests
-        run: |
-          npm ci
-          npm run test
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test
