--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
     "@testing-library/user-event": "^14.4.3",
+    "@vitest/coverage-c8": "^0.31.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "svelte": "^3.57.0",
